fix multiple file github commit error / contexmenu on page / prettier formatted

--- a/src/styles.css
+++ b/src/styles.css
@@ -131,7 +131,7 @@ input[name="tag"] {
 .actions {
   cursor: default;
   display: grid;
-  grid-template-columns: 1fr 1fr 40px;
+  grid-template-columns: 1fr;
   grid-gap: 4px;
 }
 
